@@ -27,7 +27,7 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.008001
-Test2         = 1.302117
+Test2         = 1.302119
 Importer      = 0.024
 Term::Table   = 0.002
 Sub::Info     = 0.002
