@@ -3,11 +3,11 @@ use Test2::AsyncSubtest;
 use Test2::Tools::AsyncSubtest;
 use Test2::Tools::Compare qw{ array event call T };
 use Test2::IPC;
-use Test2::Util qw/CAN_REALLY_FORK CAN_THREAD/;
+use Test2::Util qw/CAN_REALLY_FORK/;
 use Test2::API qw/context context_do intercept/;
 
 skip_all 'These tests require forking or threading'
-    unless CAN_REALLY_FORK || CAN_THREAD;
+    unless CAN_REALLY_FORK || Test2::AsyncSubtest->CAN_REALLY_THREAD;
 
 subtest(
     'fork tests',
