@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Minor test changes for thread safety
+
 0.000092  2017-11-28 10:17:37-08:00 America/Los_Angeles
 
     - No changes since last trial
